--- a/buycurium/index.html
+++ b/buycurium/index.html
@@ -37,172 +37,25 @@
   <header class="js-header" id="header">
     <nav class="header__nav">
       <ul>
-        <li><a  class="js-btn" href="../index.html#Curium">Curium</a></li>		
-        <li><a  class="js-btn focus" href="../index.html#Exchanges" >Exchanges</a></li>		
-        <li><a  class="js-btn" href="../index.html#Masternodes" >Masternodes</a></li>
-        <li><a  class="js-btn" href="../index.html#Wallet">Wallet</a></li>
-        <li><a  class="js-btn" href="../index.html#Resources">Resources</a></li>
-        <li><a  class="js-btn" href="../index.html#FAQ">FAQ</a></li>
-        <li><a  class="js-btn" href="../index.html#Contact">Contact</a></li>
+        <li><a  class="js-btn" href="/">Curium</a></li>		
+        <li><a  class="js-btn focus" href="/" >Exchanges</a></li>		
+        <li><a  class="js-btn" href="/" >Masternodes</a></li>
+        <li><a  class="js-btn" href="/">Wallet</a></li>
+        <li><a  class="js-btn" href="/">Resources</a></li>
+        <li><a  class="js-btn" href="/">FAQ</a></li>
+        <li><a  class="js-btn" href="/">Contact</a></li>
         <li class="buttond"><a class="js-btn">Buy Curium</a></li>	      
        </ul>
     </nav>
   </header>
-  <div class="hero" id="hero">
 
-    <img class="title" src="img/logo.png" style="width: 25%;">
-    <div id="particles-js"></div>
-
-  </div>
-
-
-  <section class="  intro js-section">
-    <article class="odd">
-      <h2 class="blocktitle">Curium</h2>
-      <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
-        Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
-        specifically for implementation across everyday business and personal transactions. With low transaction fees and
-        1-minute block times, you will have your funds available anywhere and anytime.</p>
-
-      <div class="features">
-        <div class="feature__block">
-          <img class="feature-img" src="../img/svg/masternode.svg" alt="">
-          <p>An integrated network of nodes ensures a safe and effective transfer of funds anywhere in the world</p>
-        </div>
-        <div class="feature__block">
-          <img class="feature-img" src="../img/svg/algo.svg" alt="">
-          <p>The latest POS algorithm, ensuring CRU will stay decentralised</p>
-        </div>
-        <div class="feature__block">
-          <img class="feature-img" src="../img/svg/secure.svg" alt="">
-          <p>Curium is supported by multiple layers of security including both mining and masternode support</p>
-        </div>
-        <div class="feature__block">
-          <img class="feature-img" src="../img/svg/team.svg" alt="">
-          <p>Instant Send transactions ensure you can use your funds instantly, anywhere in the world, all you need is an internet
-            connection
-          </p>
-        </div>
-        <div class="feature__block">
-          <img class="feature-img" src="../img/svg/mining.svg" alt="">
-          <p>Developed by a passionate and motivated team, driven by a desire for a global, secure & decentralised way of payment</p>
-        </div>
-        <div class="feature__block">
-          <img class="feature-img" src="../img/svg/id.svg" alt="">
-          <p>A cryptocurrency with an open-source platform, designed with private and fast transactions in mind</p>
-        </div>
-      </div>
-
-    </article>
-  </section>
-  ffff 
-
-  <section class="swap js-section">
-    <article>
-      <h2 class="blocktitle">Exchanges</h2>
-      <div class="block">
-        <p>
-		There are no exchanges on the new network atm
-        </a>
-        <p>
-
-        </p>
-      </div>
-    </article>
-  </section>
-
-  <section class="masternodes js-section">
-    <article class="odd">
-      <h2 class="blocktitle">Masternodes</h2>
-      <div class="block">
-        <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
-          Transactions’ as well as increasing the overall security. Curium requires 10,000CRU collateral to secure a masternode,
-          where it will need to be held on a static IP. The team at Curium has created one of the easiest installation guides
-          that even a first-timer can set up a masternode quickly and easily.
-        </p>
-        <p>
-          check out the guide for setup:
-          <a href="https://github.com/Curium/curium-docs/blob/master/Documentation/masternode_setup_vps.md">Masternode setup</a>
-        </p>
-      </div>
-    </article>
-  </section>
-
-
-  <section class="wallet js-section">
-    <article>
-      <h3 class="subtitle">Download the latest Curium wallet</h3>
-      <div class="wallets">
-    
-           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit</button></a> 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit</button></a> 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac</button></a>  
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra</button></a>	   
-	      
-	   <div class="wallets"> 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit</button></a>  
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit</button></a>
-
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM</button></a>	 
-	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raise">Source Code</button></a>	
-	      </div>
-		   <!--
-        <a href="" target="_blank">
-          <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
-        <a href="" target="_blank">
-             <img src="img/svg/andriod.svg" alt=""> Mobile wallet</a>-->	
-	</div>	 
-      </div>
-    </article>
-  </section>
-
-  <section class="resources js-section">
-    <article class="odd">
-      <h2 class="blocktitle">Resources</h2>
-      <div class="explorer">
-        <a href="https://explorer.curiumofficial.com" target="_blank">Official Blockexplorer</a>
-	<a href="https://altexplorer.co/coin/cru" target="_blank">Altexplorer</a>
-    </article>
-  </section>
-
-  <section class="  faq js-section">
-    <article>
-
-      <h2 class="blocktitle">Questions</h2>
-      <div class="questions">
-        <div class="question">
-          <h3 class="">Why community driven?</h3>
-          <div class="answer">
-            People of the crypto world has had their fair share of leaders with questionable motivations. Giving the power to the community
-            is the only way to achieve true decentralisation
-          </div>
-        </div>
-
-        <div class="question">
-          <h3 class="">Who is the Curium Team?</h3>
-          <div class="answer">
-            Developers, contributors and moderators originating from the community that are stepping up and taking various responsibilities
-            for a brighter future of Curium.
-          </div>
-        </div>
-
-        <div class="question">
-          <h3 class="">Who is the community?</h3>
-          <div class="answer">
-            Individuals who are fed up with their voices going unheard, now they are gathering to shape their destiny. Working to ensure
-            their efforts and collaboration lead to a brighter future for all
-          </div>
-        </div>
-
-        <div class="question">
-          <h3 class="">Why POS?</h3>
-          <div class="answer">
-            POS is ecofriendy and supports the people who hold Curium without it Curium would be killing the Earth instead of starting a revalution 
-          </div>
-        </div>
-      </div>
-    </article>
-  </section>
+  <h1>Currently available on the following exchanges:</h1>
+  
+ <div class="img-with-aniamtion-wrap center" data-max-width="100%" data-border-radius="none"><div class="inner"><a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/CRU/1D" target="_blank" class="center"><img data-shadow="none" data-shadow-direction="middle" class="img-with-animation  animated-in" data-delay="0" height="360" width="768" data-animation="fade-in" src="https://downloads.intercomcdn.com/i/o/68991/cb140262795deb9661ba6e80/28039a097192fada46a57c696e57973d.png" sizes="100vw" alt="" style="opacity: 1;"></a></div></div> 
+  
+ <div class="img-with-aniamtion-wrap center" data-max-width="100%" data-border-radius="none"><div class="inner"><a href="https://graviex.net/markets/crubtc?pinned=true" target="_blank" class="center"><img data-shadow="none" data-shadow-direction="middle" class="img-with-animation  animated-in" data-delay="0" height="360" width="768" data-animation="fade-in" src="https://graviex.net/assets/logo-3f8ea08c747544cf775c34bd10f11181.png" sizes="100vw" alt="" style="opacity: 1;"></a></div></div>  
+ 
+ <div class="img-with-aniamtion-wrap center" data-max-width="100%" data-border-radius="none"><div class="inner"><a href="https://cryptohub.online/market/CRU/" target="_blank" class="center"><img data-shadow="none" data-shadow-direction="middle" class="img-with-animation  animated-in" data-delay="0" height="360" width="768" data-animation="fade-in" src="https://imgur.com/a/G5Wsf4F" sizes="100vw" alt="" style="opacity: 1;"></a></div></div>  
 
   <footer class="js-section">
     <nav class="footer__nav">
@@ -220,9 +73,6 @@
     </nav>
   </footer>
 
-  <script src="js/particles.min.js"></script>
-  <script src="js/zenscroll-min.js?v=2"></script>
-  <script src="js/script1.js"></script>
 
 
 </body>
