--- a/buycurium/index.html
+++ b/buycurium/index.html
@@ -55,7 +55,7 @@
   
  <div class="img-with-aniamtion-wrap center" data-max-width="100%" data-border-radius="none"><div class="inner"><a href="https://graviex.net/markets/crubtc?pinned=true" target="_blank" class="center"><img data-shadow="none" data-shadow-direction="middle" class="" src="https://graviex.net/assets/logo-3f8ea08c747544cf775c34bd10f11181.png" sizes="100vw" alt="" style="opacity: 1;"></a></div></div>  
  
- <div class=" center" data-max-width="100%" data-border-radius="none"><div class="inner"><a href="https://cryptohub.online/market/CRU/" target="_blank" class="center"><img data-shadow="none" data-shadow-direction="middle" class="" src="https://imgur.com/a/G5Wsf4F" sizes="100vw" alt="" style="opacity: 1;"></a></div></div>  
+ <div class=" center" data-max-width="100%" data-border-radius="none"><div class="inner"><a href="https://cryptohub.online/market/CRU/" target="_blank" class="center"><img data-shadow="none" data-shadow-direction="middle" class="" src="https://i.imgur.com/Y2FRtC9.png" sizes="100vw" alt="" style="opacity: 1;"></a></div></div>  
 
   <footer class="js-section">
     <nav class="footer__nav">
