--- a/buycurium/index.html
+++ b/buycurium/index.html
@@ -50,12 +50,19 @@
   </header>
 
   <h1>Currently available on the following exchanges:</h1>
-  
+<br>  
+<br>  
+<br>  
+<br>    
+<br>    
+<br>  
+<center>  
  <a href="https://app.stocks.exchange/en/basic-trade/pair/BTC/CRU/1D" target="_blank" class="center"><h4>Stocks.exchange</h4></a>
   
  <a href="https://graviex.net/markets/crubtc?pinned=true" target="_blank" class="center"><h4>Graviex</h4></a>
  
   <a href="https://cryptohub.online/market/CRU/" target="_blank" class="center"><h4>CryptoHub</h4></a>
+</center>
   <footer class="js-section">
     <nav class="footer__nav">
       <ul>
