--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -33,7 +33,7 @@
 <body>
 <div id="app">
     <form class="uk-form-horizontal uk-margin-small">
-        <div class="uk-margin-small">
+        <div class="uk-margin-small">33
             <label class="uk-form-label" for="stakingAmount">Staking Amount</label>
             <div class="uk-form-controls">
                 <input type="number" class="uk-input uk-form-width-medium" id="stakingAmount" v-model="stakingAmount">
@@ -43,7 +43,7 @@
         <div class="uk-margin-small">
             <label class="uk-form-label" for="totalStaking">Total Staking Coins</label>
             <div class="uk-form-controls">
-                <input type="number" class="uk-input uk-form-width-medium" id="totalStaking" v-model="totalStaking">50
+                <input type="number" class="uk-input uk-form-width-medium" id="totalStaking" v-model="50">50
             </div>
             <span class="info"><a class="info" href="https://chainz.cryptoid.info/phr/#!extraction" target="_blank">Find here</a> - red & blue pie</span>
         </div>
