--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -43,7 +43,7 @@
         <div class="uk-margin-small">
             <label class="uk-form-label" for="totalStaking">Total Staking Coins</label>
             <div class="uk-form-controls">
-                <input type="number" class="uk-input uk-form-width-medium" id="totalStaking" v-model="50">50
+                <input type="number" class="uk-input uk-form-width-medium" id="totalStaking" v-model="totalStaking" value="500">
             </div>
             <span class="info"><a class="info" href="https://chainz.cryptoid.info/phr/#!extraction" target="_blank">Find here</a> - red & blue pie</span>
         </div>
