--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -63,7 +63,13 @@
             </div><div id="json-data-3-20"></div>
             <span class="info">You'll have to stake this amount 24/7 for the estimation to be correct</span>
         </div>
-<input type="hidden" id="totalStaking" value="" />
+        <div class="uk-margin-small">
+            <label class="uk-form-label" for="totalStaking">Total Staking Coins</label>
+            <div class="uk-form-controls">
+                <input type="number" class="uk-input uk-form-width-medium" id="totalStaking" v-model="totalStaking">
+            </div>
+            <span class="info"><a class="info" href="https://chainz.cryptoid.info/phr/#!extraction" target="_blank">Find here</a> - red & blue pie</span>
+        </div>
         <div class="uk-margin-small">
             <label class="uk-form-label" for="lockedIn">Coins Locked in Masternodes</label>
             <div class="uk-form-controls">
