--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -127,7 +127,7 @@
         el: '#app',
         data: {
             stakingAmount: '1',
-            totalStaking: '8986221',
+            totalStaking: '',
             lockedIn: '5010000',
             blockRewards: '2.8'
         },
