--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -123,6 +123,16 @@
 </div>
 </body>
 <script type="application/javascript">
+		var xmlhttp = new XMLHttpRequest();
+		xmlhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				var myObj = JSON.parse(this.responseText);						
+				<!-- for(var j = 0; j < myObj.curium.length; j++){ -->
+				totalStaking = myObj.data[0][0];
+			}
+		};
+		xmlhttp.open("GET", "num.json", true);
+		xmlhttp.send();	
     var app = new Vue({
         el: '#app',
         data: {
