--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -146,6 +146,7 @@
 		xmlhttp.send();	
         data: {
             stakingAmount: '1',
+            totalStaking,
             lockedIn: '5010000',
             blockRewards: '2.8'
         },
