--- a/buycurium/test.html
+++ b/buycurium/test.html
@@ -123,7 +123,7 @@
 </div>
 </body>
 <script type="application/javascript">
-
+		var xmlhttp = new XMLHttpRequest();
 		xmlhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
 				var myObj = JSON.parse(this.responseText);						
